/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package bufman.module.v1alpha;

import "google/protobuf/timestamp.proto";

enum DigestType {
  DIGEST_TYPE_UNSPECIFIED = 0;
  DIGEST_TYPE_SHAKE256 = 1;
}

// Digest represents a hash function's value.
message Digest {
  // digest_type describes the hash algorithm. e.g. "SHAKE256"
  DigestType digest_type = 1;
  // digest is the hash's output without encoding.
  bytes digest = 2;
}

// Blob represents some module content with an associated hash.
message Blob {
  // Digest of the content.
  Digest digest = 1;
  // Content of the blob. Optional when Blob is used as a content pointer.
  bytes content = 2;
}

// ModuleReference is a module reference.
message ModuleReference {
  string remote = 1;
  string owner = 2;
  string repository = 3;
  // either tag, or commit
  string reference = 4;
}

// ModulePin is a module pin.
message ModulePin {
  reserved 6;
  reserved "digest";

  string remote = 1;
  string owner = 2;
  string repository = 3;
  string branch = 4;
  string commit = 5;
  google.protobuf.Timestamp create_time = 7;
  // Module's manifest digest. Replacement for previous b1/b3 digests.
  string manifest_digest = 8;
}

// LocalModulePin is a local module pin.
//
// It does not include a remote.
message LocalModulePin {
  reserved 5;
  reserved "digest";

  string owner = 1;
  string repository = 2;
  string branch = 3;
  string commit = 4;
  // Module's manifest digest. Replacement for previous b1/b3 digests.
  string manifest_digest = 6;
  google.protobuf.Timestamp create_time = 7;
  string draft_name = 8;
}

